# endo

./: .gitignore  AUTHORS  HACKING  Makefile.am  NEWS  README.md  THANKS  acinclude.m4  autogen.sh  configure.ac.in
docs/reference/: Makefile.am  endo-docs.xml  endo-open.xml  endo-sections.txt  endo.types  exo-docs.xml  exo-open.xml  visual-index.xml
endo/: Makefile.am  abicheck.sh  endo-2.pc.in  endo-binding.c  endo-binding.h  endo-cell-renderer-icon.c  endo-cell-renderer-icon.h  endo-config.c  endo-config.h.in  endo-execute.c  endo-execute.h  endo-gdk-pixbuf-extensions.c  endo-gdk-pixbuf-extensions.h  endo-gobject-extensions.c  endo-gobject-extensions.h  endo-gtk-extensions.c  endo-gtk-extensions.h  endo-icon-chooser-dialog.c  endo-icon-chooser-dialog.h  endo-icon-chooser-model.c  endo-icon-chooser-model.h  endo-icon-view-accessible.c  endo-icon-view.c  endo-icon-view.h  endo-job.c  endo-job.h  endo-private.c  endo-private.h  endo-simple-job.c  endo-simple-job.h  endo-string.c  endo-string.h  endo-thumbnail-preview.c  endo-thumbnail-preview.h  endo-thumbnail.c  endo-thumbnail.h  endo-tree-view.c  endo-tree-view.h  endo-utils.c  endo-utils.h  (+3 more)
endo-desktop-item-edit/: Makefile.am  endo-die-command-entry.c  endo-die-command-entry.h  endo-die-command-model.c  endo-die-command-model.h  endo-die-desktop-model.c  endo-die-desktop-model.h  endo-die-editor.c  endo-die-editor.h  endo-die-enum-types.c  endo-die-enum-types.h  endo-die-utils.c  endo-die-utils.h  main.c
endo-open/: Makefile.am  main.c
exo/: Makefile.am  abicheck.sh  exo-2.pc.in  exo-binding.c  exo-binding.h  exo-cell-renderer-icon.c  exo-cell-renderer-icon.h  exo-config.c  exo-config.h.in  exo-execute.c  exo-execute.h  exo-gdk-pixbuf-extensions.c  exo-gdk-pixbuf-extensions.h  exo-gobject-extensions.c  exo-gobject-extensions.h  exo-gtk-extensions.c  exo-gtk-extensions.h  exo-icon-chooser-dialog.c  exo-icon-chooser-dialog.h  exo-icon-chooser-model.c  exo-icon-chooser-model.h  exo-icon-view-accessible.c  exo-icon-view.c  exo-icon-view.h  exo-job.c  exo-job.h  exo-private.c  exo-private.h  exo-simple-job.c  exo-simple-job.h  exo-string.c  exo-string.h  exo-thumbnail-preview.c  exo-thumbnail-preview.h  exo-thumbnail.c  exo-thumbnail.h  exo-tree-view.c  exo-tree-view.h  exo-utils.c  exo-utils.h  (+3 more)
exo-desktop-item-edit/: Makefile.am  exo-die-command-entry.c  exo-die-command-entry.h  exo-die-command-model.c  exo-die-command-model.h  exo-die-desktop-model.c  exo-die-desktop-model.h  exo-die-editor.c  exo-die-editor.h  exo-die-enum-types.c  exo-die-enum-types.h  exo-die-utils.c  exo-die-utils.h  main.c
exo-open/: Makefile.am  main.c
pixmaps/: Makefile.am
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kab.po  kk.po  kn.po  ko.po  lt.po  lv.po  ms.po  (+27 more)
tests/: Makefile.am  test-endo-icon-chooser-dialog.c  test-endo-noop.c  test-endo-string.c  test-exo-icon-chooser-dialog.c  test-exo-noop.c  test-exo-string.c
