
AM_CPPFLAGS = 								\
	-I$(top_srcdir)							\
	-DDATADIR=\"$(datadir)\"					\
	-DENDO_COMPILATION						\
	-DG_LOG_DOMAIN=\"endo\"						\
	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)/expidus1/endo-$(LIBENDO_VERSION_API)\"	\
	-DLIBENDO_VERSION_API=\"$(LIBENDO_VERSION_API)\"			\
	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"

libendo_headers =							\
	endo-binding.h							\
	endo-cell-renderer-icon.h					\
	endo-execute.h							\
	endo-gdk-pixbuf-extensions.h					\
	endo-gtk-extensions.h						\
	endo-gobject-extensions.h					\
	endo-icon-chooser-dialog.h					\
	endo-icon-view.h							\
	endo-job.h							\
	endo-simple-job.h						\
	endo-string.h							\
	endo-tree-view.h							\
	endo-utils.h

libendo_2_built_sources =							\
	endo-enum-types.h \
	endo-alias.h							\
	endo-aliasdef.c							\
	endo-enum-types.c						\
	endo-marshal.c							\
	endo-marshal.h

libendo_2_includedir = $(includedir)/endo-2/endo

lib_LTLIBRARIES = libendo-2.la

libendo_2_include_HEADERS =						\
	endo.h								\
	endo-binding.h							\
	endo-config.h							\
	endo-execute.h							\
	endo-gdk-pixbuf-extensions.h					\
	endo-gtk-extensions.h						\
	endo-gobject-extensions.h					\
	endo-job.h							\
	endo-simple-job.h						\
	endo-string.h							\
	endo-utils.h							\
	endo-icon-chooser-dialog.h					\
	endo-icon-chooser-model.h					\
	endo-icon-view.h							\
	endo-enum-types.h						\
	endo-cell-renderer-icon.h					\
	endo-thumbnail.h							\
	endo-thumbnail-preview.h						\
	endo-tree-view.h

libendo_2_la_SOURCES =							\
	$(libendo_2_include_HEADERS)					\
	endo-binding.c							\
	endo-marshal.c							\
	endo-marshal.h							\
	endo-private.c							\
	endo-private.h							\
	endo-config.c							\
	endo-execute.c							\
	endo-gdk-pixbuf-extensions.c					\
	endo-gtk-extensions.c						\
	endo-gobject-extensions.c					\
	endo-job.c							\
	endo-simple-job.c						\
	endo-string.c							\
	endo-utils.c							\
	endo-icon-chooser-dialog.c					\
	endo-icon-chooser-model.c					\
	endo-icon-view.c							\
	endo-enum-types.c						\
	endo-cell-renderer-icon.c					\
	endo-thumbnail.c							\
	endo-thumbnail-preview.c						\
	endo-tree-view.c

libendo_2_la_CFLAGS =							\
	$(LIBEXPIDUS1UTIL_CFLAGS)						\
	$(GIO_CFLAGS)							\
	$(GTK_CFLAGS)							\
	$(LIBX11_CFLAGS)

libendo_2_la_LDFLAGS =							\
	-export-dynamic							\
	-version-info $(LIBENDO_VERINFO)					\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined

libendo_2_la_LIBADD =							\
	$(LIBEXPIDUS1UTIL_LIBS)						\
	$(GIO_LIBS)							\
	$(GIO_UNIX_LIBS)							\
	$(GTK_LIBS)							\
	$(LIBX11_LIBS)							\
	-lm

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = endo-2.pc

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES =								\
	actual-abi							\
	expected-abi							\
	xgen-eetc							\
	xgen-eeth							\
	xgen-emc							\
	xgen-emh

DISTCLEANFILES =							\
	stamp-endo-enum-types.h						\
	stamp-endo-marshal.h						\
	$(libendo_2_built_sources)

BUILT_SOURCES =								\
	$(libendo_2_built_sources)

endo-alias.h: make-endo-alias.pl endo.symbols
	$(AM_V_GEN) $(PERL) $(srcdir)/make-endo-alias.pl < $(srcdir)/endo.symbols > endo-alias.h

endo-aliasdef.c: make-endo-alias.pl endo.symbols
	$(AM_V_GEN) $(PERL) $(srcdir)/make-endo-alias.pl -def < $(srcdir)/endo.symbols > endo-aliasdef.c

endo-enum-types.h: stamp-endo-enum-types.h
	@true
stamp-endo-enum-types.h: $(libendo_headers) Makefile
	$(AM_V_GEN) ( cd $(srcdir) && glib-mkenums \
		--fhead "#ifndef __ENDO_ENUM_TYPES_H__\n#define __ENDO_ENUM_TYPES_H__\n#include <libexpidus1util/libexpidus1util.h>\nG_BEGIN_DECLS\n" \
		--fprod "/* enumerations from \"@filename@\" */\n" \
		--vhead "GType @enum_name@_get_type (void) G_GNUC_CONST;\n#define ENDO_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n" \
		--ftail "G_END_DECLS\n\n#endif /* !__ENDO_ENUM_TYPES_H__ */" \
		$(libendo_headers) ) >> xgen-eeth \
	&& (cmp -s xgen-eeth endo-enum-types.h || cp xgen-eeth endo-enum-types.h ) \
	&& rm -f xgen-eeth \
	&& echo timestamp > $(@F)

endo-enum-types.c: $(libendo_headers) Makefile
	$(AM_V_GEN) ( cd $(srcdir) && glib-mkenums \
		--fhead "#undef GTK_DISABLE_DEPRECATED\n#define GTK_ENABLE_BROKEN\n#include <endo/endo.h>\n#include <endo/endo-alias.h>\n" \
		--fprod "\n/* enumerations from \"@filename@\" */" \
		--vhead "GType\n@enum_name@_get_type (void)\n{\n\tstatic GType type = 0;\n\tif (type == 0) {\n\tstatic const G@Type@Value values[] = {"\
		--vprod "\t{ @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
		--vtail "\t{ 0, NULL, NULL }\n\t};\n\ttype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n\treturn type;\n}\n" \
		--ftail "\n#define __ENDO_ENUM_TYPES_C__\n#include <endo/endo-aliasdef.c>\n" \
		$(libendo_headers) ) >> xgen-eetc \
	&& cp xgen-eetc endo-enum-types.c \
	&& rm -f xgen-eetc

endo-marshal.h: stamp-endo-marshal.h
	@true
stamp-endo-marshal.h: endo-marshal.list Makefile
	$(AM_V_GEN) ( cd $(srcdir) && glib-genmarshal \
		--prefix=_endo_marshal \
		--header endo-marshal.list ) >> xgen-emh \
	&& ( cmp -s xgen-emh endo-marshal.h || cp xgen-emh endo-marshal.h ) \
	&& rm -f xgen-emh \
	&& echo timestamp > $(@F)

endo-marshal.c: endo-marshal.list Makefile
	$(AM_V_GEN) echo "#include <endo/endo-marshal.h>" > xgen-emc \
	&& ( cd $(srcdir) && glib-genmarshal \
		--prefix=_endo_marshal \
		--body endo-marshal.list ) >> xgen-emc \
	&& cp xgen-emc endo-marshal.c \
	&& rm -f xgen-emc
endif


# required for gtk-doc
dist-hook: all

EXTRA_DIST = 								\
	abicheck.sh							\
	endo.symbols							\
	endo-alias.h							\
	endo-aliasdef.c							\
	endo-icon-view-accessible.c					\
	endo-marshal.list						\
	make-endo-alias.pl

if HAVE_GNUC_VISIBILITY
TESTS =									\
	abicheck.sh
endif

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
